# ml_lab

./: .gitignore  README.md  main.py  pyproject.toml
data/: my_test_weight.pkl
notebooks/: mlp_mnist_inference.py  softmax_bar.py  test_for_root_dir.py  test_losses_batch.py  test_losses_naive.py  test_mnist_load.py
notebooks/01_perceptrons/: perceptron.py
notebooks/02_feedforward_inference/: activation_function.py  mlp_mnist_inference_batch.py  mlp_two_layer_propagation.py  softmax_bar.py
notebooks/03_optimization_losses/: gradient_descent_core.py  gradient_simplenet.py  plot_lr_topology.py  test_numerical_diff.py  visualize_3d_bowl.py  visualize_gradient_field.py
notebooks/04_backward_propagation/: add_mul_mix_chain.py  affine_single_check.py  binary_operator_net.py  elementwise_activations_gradient_check.py  mse_gradient_check.py  scalar_mul_const_chain.py  softmax_cee_gradient_check.py
notebooks/data_infra_tests/: inspect_pkl.py  test_dataset.py  test_mnist_visualize.py  test_pickle_craft.py
src/ml_lab/: __init__.py  activations.py  dataset.py  gradient.py  layers.py  losses.py  models.py  optimizer.py  utils.py
